@@ -5,7 +5,7 @@ import drinkshop.repository.Repository;
 import drinkshop.service.validator.ProductValidator;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 public class ProductService {
 
@@ -31,13 +31,6 @@ public class ProductService {
     }
 
     public List<Product> getAllProducts() {
-//        Iterable<Product> it=productRepo.findAll();
-//        ArrayList<Product> products=new ArrayList<>();
-//        it.forEach(products::add);
-//        return products;
-
-//        return StreamSupport.stream(productRepo.findAll().spliterator(), false)
-//                    .collect(Collectors.toList());
         return productRepo.findAll();
     }
 
@@ -49,13 +42,13 @@ public class ProductService {
         if (categorie == CategorieBautura.ALL) return getAllProducts();
         return getAllProducts().stream()
                 .filter(p -> p.getCategorie() == categorie)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Product> filterByTip(TipBautura tip) {
         if (tip == TipBautura.ALL) return getAllProducts();
         return getAllProducts().stream()
                 .filter(p -> p.getTip() == tip)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
